fix: light-theme quiz correct / wrong color

--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -608,7 +608,7 @@ ion-app.ios .notfound__card {
       background: #f3f3f3 !important;
     }
 
-    .choice-container {
+    .choice-container:not(.correct):not(.wrong) {
       background: #f3f3f3;
     }
 
